More interval types for scheduling
This adds daily, monthly and yearly interval types, which were missing
from the MVP implementation. Fixes #2.

--- a/l10n/de.json
+++ b/l10n/de.json
@@ -1,19 +1,45 @@
 { "translations": {
-    "Calendar Newsletter" : "Kalender Newsletter",
     "Failed to load schedule" : "Fehler beim Laden der Planung",
     "Configuration successfully saved" : "Konfiguration erfolgreich gespeichert",
     "Failed to save configuration" : "Fehler beim Speichern der Konfiguration",
     "Really send the newsletter NOW to all receipients?" : "Den Newsletter wirklich JETZT an alle Empfänger schicken?",
     "Newsletter sent" : "Newsletter gesendet",
     "Failed to send newsletter" : "Fehler beim Senden des Newsletters",
-    "%s (shared by %s)" : "%s (geteilt von %s)",
     "Schedule Newsletter" : "Newsletter Planen",
-    "Receipients:" : "Empfänger:",
+    "Recipients:" : "Empfänger:",
     "Send now" : "Jetzt senden",
+    "Last execution time:" : "Letzter Ausführungszeitpunkt:",
+    "never" : "Nie",
     "Subject:" : "Betreff:",
     "Interval:" : "Intervall:",
     "Off" : "Aus",
+    "Daily" : "Täglich",
     "Weekly" : "Wöchentlich",
+    "Monthly (fixed weekday)" : "Monatlich (bestimmter Wochentag)",
+    "Monthly (fixed day of month)" : "Monatlich (bestimmter Tag des Monats)",
+    "Yearly (fixed weekday)" : "Jährlich (bestimmter Wochentag)",
+    "Yearly (fixed day of month)" : "Jährlich (bestimmtes Datum)",
+    "Skip executions:" : "Zu überspringende Ausführungen: (z.B. 1 für eine Ausführung alle 2 Wochen)",
+    "Month:" : "Monat:",
+    "January" : "Januar",
+    "February" : "Februar",
+    "March" : "März",
+    "April" : "April",
+    "May" : "Mai",
+    "June" : "Juni",
+    "July" : "Juli",
+    "August" : "August",
+    "September" : "September",
+    "October" : "Oktober",
+    "November" : "November",
+    "December" : "Dezember",
+    "Week of month:" : "Woche des Monats:",
+    "First" : "Erste",
+    "Second" : "Zweite",
+    "Third" : "Dritte",
+    "Fourth" : "Vierte",
+    "Fifth" : "Fünfte",
+    "Day of month: (zero and negative values refer to days before end of month)" : "Tag des Monats: (Werte, die kleiner oder gleich 0 sind, beziehen sich auf Tage vor Monatsende)",
     "Weekday:" : "Wochentag:",
     "Monday" : "Montag",
     "Tuesday" : "Dienstag",
@@ -48,6 +74,8 @@
     "User's view" : "Benutzeransicht",
     "Previous Newsletter" : "Letzter Newsletter",
     "Next Newsletter" : "Nächster Newsletter",
-    "Due to changes to the calendars used to generate the newsletter, this preview might not be accurate!" : "Aufgrund von Änderungen an den zugrunde liegenden Kalendern und Terminen, kann sich diese Vorschau vom tatsächlich gesendeten Newsletter unterscheiden!"
+    "Due to changes to the calendars used to generate the newsletter, this preview might not be accurate!" : "Aufgrund von Änderungen an den zugrunde liegenden Kalendern und Terminen, kann sich diese Vorschau vom tatsächlich gesendeten Newsletter unterscheiden!",
+    "Calendar Newsletter" : "Kalender Newsletter",
+    "%s (shared by %s)" : "%s (geteilt von %s)"
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
