Fix bugs with scheduling of the newsletter

--- a/l10n/de.json
+++ b/l10n/de.json
@@ -5,6 +5,7 @@
     "Really send the newsletter NOW to all receipients?" : "Den Newsletter wirklich JETZT an alle Empfänger schicken?",
     "Newsletter sent" : "Newsletter gesendet",
     "Failed to send newsletter" : "Fehler beim Senden des Newsletters",
+    "Failed to remove last execution timestamp" : "Fehler beim Löschen des letzten Ausführungszeitpunkts",
     "Schedule Newsletter" : "Newsletter Planen",
     "Recipients:" : "Empfänger:",
     "Send now" : "Jetzt senden",
