Prepare version 1.1.4 for initial appstore release

--- a/l10n/de.json
+++ b/l10n/de.json
@@ -73,6 +73,7 @@
     "Content" : "Inhalt",
     "Schedule" : "Planung",
     "User's view" : "Benutzeransicht",
+    "Configuration Guide" : "Konfigurationsanleitung",
     "Previous Newsletter" : "Letzter Newsletter",
     "Next Newsletter" : "Nächster Newsletter",
     "Due to changes to the calendars used to generate the newsletter, this preview might not be accurate!" : "Aufgrund von Änderungen an den zugrunde liegenden Kalendern und Terminen, kann sich diese Vorschau vom tatsächlich gesendeten Newsletter unterscheiden!",
