--- a/l10n/de/calendar_news.po
+++ b/l10n/de/calendar_news.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ownCloud Core 8.0.0\n"
 "Report-Msgid-Bugs-To: translations@owncloud.org\n"
-"POT-Creation-Date: 2021-05-03 01:27+0200\n"
-"PO-Revision-Date: 2021-05-03 01:27+0200\n"
+"POT-Creation-Date: 2022-08-06 18:07+0200\n"
+"PO-Revision-Date: 2022-08-06 19:16+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: js/script.js:37
 msgid "Failed to load schedule"
@@ -317,6 +317,10 @@ msgstr "Planung"
 #: templates/navigation/index.php:4
 msgid "User's view"
 msgstr "Benutzeransicht"
+
+#: templates/navigation/index.php:6
+msgid "Configuration Guide"
+msgstr "Konfigurationsanleitung"
 
 #: templates/simple.php:28
 msgid "Previous Newsletter"
