--- a/l10n/en.json
+++ b/l10n/en.json
@@ -73,6 +73,7 @@
     "Content" : "Content",
     "Schedule" : "Schedule",
     "User's view" : "User's view",
+    "Configuration Guide" : "Configuration Guide",
     "Previous Newsletter" : "Previous Newsletter",
     "Next Newsletter" : "Next Newsletter",
     "Due to changes to the calendars used to generate the newsletter, this preview might not be accurate!" : "Due to changes to the calendars used to generate the newsletter, this preview might not be accurate!",
